fixed bug for a:focus_visible

--- a/WWW/style.css
+++ b/WWW/style.css
@@ -93,7 +93,7 @@ a:hover {
 }
 
 a:focus-visible {
-	outline: 2px solid $0000ee;
+	outline: 2px solid #0000ee;
 	outline-offset: 2px;
 }
 
